--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -263,8 +263,9 @@ addThis:
 # https://github.com/overtrue/share.js
 sharejs:
   enable: true
-  sites: facebook,twitter,wechat,weibo,qq
+  sites: facebook,twitter,wechat,weibo
 
+# qq share.js有bug
 # AddToAny
 # https://www.addtoany.com/
 addtoany:
